# non-binary-formatter

./: Cargo.toml  LICENSE  README.md
derive_try_from_u8/: Cargo.toml
derive_try_from_u8/src/: lib.rs
documentation/: [MS-NRBF].md
src/: common.rs  deserializer.rs  enums.rs  errors.rs  lib.rs  readers.rs  record_types.rs  records.rs  tests.rs
src/common/: data_types.rs  enumerations.rs
src/common/data_types/: char.rs  class_type_info.rs  date_time.rs  decimal.rs  double.rs  length_prefixed_string.rs  single.rs  time_span.rs
src/record_types/: binary_object_string.rs  class_wmat.rs  message_end.rs  serialized_stream_header.rs
src/records/: array.rs  class.rs  member_reference.rs  method_invocation.rs  other.rs
src/records/array/: array_single_object.rs  array_single_primitive.rs  array_single_string.rs  binary_array.rs  binary_array_type_enumeration.rs  common.rs
src/records/class/: class_info.rs  class_with_id.rs  class_with_members.rs  class_with_members_and_types.rs  member_type_info.rs  system_class_with_members.rs  system_class_with_members_and_types.rs
src/records/method_invocation/: binary_method_call.rs  binary_method_return.rs  common.rs  message_flags.rs  method_call_array.rs  method_return_call_array.rs
src/records/method_invocation/common/: array_of_value_with_code.rs  string_value_with_code.rs  value_with_code.rs
tests/: deserialization.rs
