cargo-features = ["edition2024"]

[package]
name = "nonbinary-formatter"
description = "A non-binary formatter for Rust"
version = "0.0.1"
edition = "2024"

[dependencies]
f128 = "0.2.9"
num-traits = "0.2.19"
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
